--- a/profile.html
+++ b/profile.html
@@ -1,25 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="profile.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="profile.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
     <script
-    src="https://code.jquery.com/jquery-3.6.4.js"
-    integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
-    crossorigin="anonymous"
-  ></script>
-  <script src="profile.js"></script>
-</head>
-<body>
-    <div class="container">
-        <h3 class="profile-heading">Profile</h3>
-        <p><b>Name  : </b><span id="name"></span></p>
-        <p><b>Password  :  </b><span id="password"></span></p>
-        <p><b>Mailid  :  </b><span id="mailid"></span></p>
-        <p><b>Ph. Number  :  </b><span id="phnumber"></span></p>
-    </div>
-</body>
+      src="https://code.jquery.com/jquery-3.6.4.js"
+      integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+      crossorigin="anonymous"
+    ></script>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="profile.js"></script>
+    <title>Profile</title>
+  </head>
+  <body>
+      <div class="container">
+        <h1>Profile</h1>
+        <p>User Details</p>
+        <div class="details">
+            <h4><b>Username</b></h4>
+            <div class="data">
+                <p class="content" id="username"></p>
+            </div>
+        </div>
+        <div class="details">
+            <h4><b>Password</b></h4>
+            <div class="data">
+                <p class="content" id="password"></p>
+            </div>
+        </div>
+        <div class="details">
+            <h4><b>Mailid</b></h4>
+            <div class="data">
+                <p class="content" id="mailid"></p>
+            </div>
+        </div>
+        <div class="details">
+            <h4><b>Phone Number</b></h4>
+            <div class="data">
+                <p class="content" id="phnumber"></p>
+            </div>
+        </div>
+  </body>
 </html>
