--- a/register.html
+++ b/register.html
@@ -31,6 +31,9 @@
           id="username"
           required
         />
+        <p id="usercheck" class="status">
+          **Username is missing
+        </p>
         <label for="email"><b>Email</b></label>
         <input
           type="text"
@@ -40,6 +43,9 @@
           required
         />
 
+        <p id="emailvalid" class="status">
+        </p>
+
         <label for="psw"><b>Password</b></label>
         <input
           type="password"
@@ -48,6 +54,9 @@
           id="password"
           required
         />
+        <p id="passcheck" class="status">
+            **Please fill the Password
+        </p>
 
         <label for="email"><b>Phone Number</b></label>
         <input
@@ -57,6 +66,8 @@
           id="phnumber"
           required
         />
+       <p id="numbercheck" class="status">
+        </p>
 
         <div class="clearfix">
           <button type="submit" id="submit" class="btn">Register</button>
